# node-abiala

./: .gitignore  .gitmodules  .npmignore  CMakeLists.txt  README.md  abieos.d.ts  abieos.js  binding.gyp  eosio.json  package-lock.json  package.json
examples/: basic.js
src/: abi.cpp  abieos.cpp  abieos.h  abieos.hpp  main.cpp  ship.abi.cpp
